azureps-cmdlets-docs/ResourceManager/AzureRM.Storage/v1.2.0/AzureRM.Storage.md
---
Module Name: AzureRM.Storage
Module Guid: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
Download Help Link: {{Please enter FwLink manually}}
Help Version: {{Please enter version of help manually (X.X.X.X) format}}
Locale: en-US
ms.assetid: E1688F0D-8CE4-4837-B0D8-FE997947557A
---

# AzureRM.Storage Module
## Description
This topic displays help topics for the Azure Storage Management Cmdlets.

## AzureRM.Storage Cmdlets
### [Get-AzureRmStorageAccountKey](./Get-AzureRmStorageAccountKey.md)
Gets the access keys for an Azure Storage account.


### [Get-AzureRmStorageAccountNameAvailability](./Get-AzureRmStorageAccountNameAvailability.md)
Checks the availability of a storage account name.


### [Get-AzureRmStorageAccount](./Get-AzureRmStorageAccount.md)
Gets a Storage account.


### [Get-AzureRmStorageUsage](./Get-AzureRmStorageUsage.md)
Gets the Storage resource usage of the current subscription.


### [New-AzureRmStorageAccountKey](./New-AzureRmStorageAccountKey.md)
Regenerates a storage key for an Azure Storage account.


### [New-AzureRmStorageAccount](./New-AzureRmStorageAccount.md)
Creates a Storage account.


### [Remove-AzureRmStorageAccount](./Remove-AzureRmStorageAccount.md)
Removes a Storage account from Azure.


### [Set-AzureRmCurrentStorageAccount](./Set-AzureRmCurrentStorageAccount.md)
Modifies the current Storage account of the specified subscription.


### [Set-AzureRmStorageAccount](./Set-AzureRmStorageAccount.md)
Modifies a Storage account.



