azureps-cmdlets-docs/ResourceManager/AzureRM.Storage/v3.3.1/AzureRM.Storage.md
---
Module Name: AzureRM.Storage
Module Guid: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
Download Help Link:
  [object Object]:
Help Version:
  [object Object]: null
Locale: en-US
content_git_url: https://github.com/Azure/azure-powershell/blob/preview/src/ResourceManager/Storage/Commands.Management.Storage/help/AzureRM.Storage.md
original_content_git_url: https://github.com/Azure/azure-powershell/blob/preview/src/ResourceManager/Storage/Commands.Management.Storage/help/AzureRM.Storage.md
gitcommit: https://github.com/Azure/azure-powershell/blob/0ab1968c9642895683c4dd9266a166404dd563c8
---

# AzureRM.Storage Module
## Description
This topic displays help topics for the Azure Storage Management Cmdlets.

## AzureRM.Storage Cmdlets
### [Add-AzureRmStorageAccountNetworkRule](Add-AzureRmStorageAccountNetworkRule.md)
 Add IpRules or VirtualNetworkRules to the NetworkRule property of a Storage Account

### [Get-AzureRmStorageAccount](Get-AzureRmStorageAccount.md)
Gets a Storage account.

### [Get-AzureRmStorageAccountKey](Get-AzureRmStorageAccountKey.md)
Gets the access keys for an Azure Storage account.

### [Get-AzureRmStorageAccountNameAvailability](Get-AzureRmStorageAccountNameAvailability.md)
Checks the availability of a storage account name.

### [Get-AzureRmStorageAccountNetworkRuleSet](Get-AzureRmStorageAccountNetworkRuleSet.md)
Get the NetWorkRule property of a Storage Account

### [Get-AzureRmStorageUsage](Get-AzureRmStorageUsage.md)
Gets the Storage resource usage of the current subscription.

### [New-AzureRmStorageAccount](New-AzureRmStorageAccount.md)
Creates a Storage account.

### [New-AzureRmStorageAccountKey](New-AzureRmStorageAccountKey.md)
Regenerates a storage key for an Azure Storage account.

### [Remove-AzureRmStorageAccount](Remove-AzureRmStorageAccount.md)
Removes a Storage account from Azure.

### [Remove-AzureRmStorageAccountNetworkRule](Remove-AzureRmStorageAccountNetworkRule.md)
Remove IpRules or VirtualNetworkRules from the NetWorkRule property of a Storage Account

### [Set-AzureRmCurrentStorageAccount](Set-AzureRmCurrentStorageAccount.md)
Modifies the current Storage account of the specified subscription.

### [Set-AzureRmStorageAccount](Set-AzureRmStorageAccount.md)
Modifies a Storage account.

### [Update-AzureRmStorageAccountNetworkRuleSet](Update-AzureRmStorageAccountNetworkRuleSet.md)
Update the NetworkRule property of a Storage Account

